--- a/signlanguage/package.json
+++ b/signlanguage/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Atom-478/SINGLANGUAGE#readme",
   "dependencies": {
+    "alert": "^5.0.0",
+    "alert-node": "^3.0.11",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
